crates/karva/tests/it/snapshots/it__coverage_command__coverage_html_index.snap
---
source: crates/karva/tests/it/coverage_command.rs
expression: "context.read_file(\"coverage-site/index.html\")"
---
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Karva &lt;coverage&gt;</title>
  <style>body{font-family:system-ui,sans-serif;margin:2rem;color:#202124}table{border-collapse:collapse;width:100%}th,td{padding:.5rem;border-bottom:1px solid #ddd;text-align:left}td.num{text-align:right;font-variant-numeric:tabular-nums}code,.source{font-family:ui-monospace,SFMono-Regular,monospace}thead{background:#f5f5f5}h1{margin-top:0}a{color:#0969da}.source{display:block;overflow:auto;background:#f6f8fa;padding:1rem}.line{display:block;min-height:1.35em}.number{display:inline-block;width:3rem;text-align:right;color:#6e7781;text-decoration:none}.executed{background:#dafbe1}.missing{background:#ffebe9}.excluded{background:#f0f0f0;color:#6e7781}.partial{background:#fff8c5}.branches{color:#9a6700}.contexts{float:right;color:#57606a;font-size:.85em}</style>
</head>
<body>
  <h1>Karva &lt;coverage&gt;</h1>
  <p>Total coverage: <strong>50%</strong> (1/2)</p>
  <table>
    <thead><tr><th>Name</th><th>Stmts</th><th>Miss</th><th>Cover</th><th>Missing</th></tr></thead>
    <tbody>
      <tr><td><a href="source-7372632f6170702e7079.html"><code>src/app.py</code></a></td><td class="num">2</td><td class="num">1</td><td class="num">50%</td><td><code>2</code></td></tr>
      <tr><td><strong>TOTAL</strong></td><td class="num"><strong>2</strong></td><td class="num"><strong>1</strong></td><td class="num"><strong>50%</strong></td><td></td></tr>
    </tbody>
  </table>
</body>
</html>
